--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/favicon/site.webmanifest" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yosef Sabag Portofolio</title>
+    <title>Joseph Sabag Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
