fix: move privacy/terms to distinct root-level URLs for Google OAuth verification

--- a/client/public/prompt-queue/index.html
+++ b/client/public/prompt-queue/index.html
@@ -33,7 +33,7 @@
     <a class="cta" href="https://chromewebstore.google.com/detail/gemini-nano-flow/lidnnjbepijjbbphbdhcchgpckpcbgfm" target="_blank" rel="noopener noreferrer">Add to Chrome - Free</a>
     
     <div class="links">
-      <a href="/prompt-queue/privacy">Privacy Policy</a> | <a href="/prompt-queue/terms">Terms of Service</a>
+      <a href="/promptqueue-privacy">Privacy Policy</a> | <a href="/promptqueue-terms">Terms of Service</a>
     </div>
 
     <div class="features">
