--- a/client/public/promptqueue-privacy.html
+++ b/client/public/promptqueue-privacy.html
@@ -29,7 +29,7 @@
 <body>
   <div class="container">
     <header>
-      <a href="/prompt-queue">← Back to PromptQueue</a>
+      <a href="/prompt-queue">← Back to PromptQueue Homepage</a>
     </header>
     
     <h1>Privacy Policy</h1>
