--- a/client/public/promptqueue-terms.html
+++ b/client/public/promptqueue-terms.html
@@ -26,7 +26,7 @@
 <body>
   <div class="container">
     <header>
-      <a href="/prompt-queue">← Back to PromptQueue</a>
+      <a href="/prompt-queue">← Back to PromptQueue Homepage</a>
     </header>
     
     <h1>Terms of Service</h1>
