feat: add Sorqa pages and update privacy/terms links for improved user experience

--- a/client/public/promptqueue-privacy.html
+++ b/client/public/promptqueue-privacy.html
@@ -69,9 +69,13 @@
 
     <div class="contact">
       <p><strong>Developer:</strong> Yosef Hayim Sabag</p>
-      <p><strong>Email:</strong> <a href="mailto:Yosefhayim@icloud.com">Yosefhayim@icloud.com</a></p>
+      <p><strong>Email:</strong> <a href="mailto:yosefisabag@gmail.com">yosefisabag@gmail.com</a></p>
       <p><strong>Website:</strong> <a href="https://yosefhayimsabag.com" target="_blank">yosefhayimsabag.com</a></p>
     </div>
   </div>
+
+  <footer style="text-align: center; padding: 40px 20px; color: #6b6878; border-top: 1px solid rgba(255,255,255,0.1); margin-top: 60px;">
+    <a href="https://yosefhayimsabag.com/prompt-queue/privacy" style="color: #9896a3; text-decoration: none;">Privacy Policy</a>
+  </footer>
 </body>
 </html>
