--- a/client/public/sorqa/index.html
+++ b/client/public/sorqa/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PromptQueue</title>
+    <title>Sorqa - Automate Prompt Generation & Queueing for Sora AI</title>
     <meta
       name="description"
-      content="Transform Google Gemini into a batch processing powerhouse. Queue multiple prompts, attach reference images, and let the extension automate your creative workflow."
+      content="Sorqa is a browser extension that automates prompt generation and queue management for Sora AI. Generate creative prompts using AI and automatically queue them for Sora video and image generation."
     />
     <style>
       * {
@@ -99,81 +99,73 @@
   </head>
   <body>
     <div class="container">
-      <h1>PromptQueue</h1>
-      <p class="tagline">Bulk Image Generation & Automation for Gemini</p>
+      <h1>Sorqa</h1>
+      <p class="tagline">Automate Prompt Generation & Queueing for Sora AI</p>
       <p class="description">
-        Transform Google Gemini into a batch processing powerhouse. Queue
-        multiple prompts, attach reference images, and let the extension
-        automate your creative workflow.
+        Supercharge your Sora AI workflow with automated prompt generation and
+        queue management. Generate creative prompts using AI and automatically
+        queue them for Sora video/image generation.
       </p>
 
       <a
         class="cta"
-        href="https://chromewebstore.google.com/detail/gemini-nano-flow/lidnnjbepijjbbphbdhcchgpckpcbgfm"
+        href="https://chromewebstore.google.com/detail/sora-auto-queue-prompts/kbpbdckjechbjmnjagfkgcplmhdkkgph"
         target="_blank"
         rel="noopener noreferrer"
         >Add to Chrome - Free</a
       >
 
       <div class="links">
-        <a href="/promptqueue-privacy">Privacy Policy</a> |
-        <a href="/promptqueue-terms">Terms of Service</a>
+        <a href="/sorqa-privacy">Privacy Policy</a> |
+        <a href="/sorqa-terms">Terms of Service</a>
       </div>
 
       <div class="features">
         <h2>Features</h2>
         <div class="feature">
-          <h3>🚀 Queue Management</h3>
+          <h3>AI-Powered Prompt Generation</h3>
           <p>
-            Add unlimited prompts and let PromptQueue automatically submit them
-            to Gemini while you work. Set drip-feed timing, pause/resume
-            anytime, and watch results come in automatically. No more manual
-            copy-pasting.
+            Generate high-quality prompts using OpenAI GPT models. Customize
+            context and style for your specific needs. Batch generate 10, 50, or
+            100+ prompts at once.
           </p>
         </div>
         <div class="feature">
-          <h3>🎨 Bulk Image Generation</h3>
+          <h3>Smart Queue Management</h3>
           <p>
-            Generate dozens or hundreds of images in one batch. Choose between
-            Gemini 2.0 Flash or Imagen 3, and watch as images are automatically
-            created and downloaded to your computer. Perfect for product
-            photography, design exploration, and content creation.
+            Automatically queue prompts for Sora processing. Drag-and-drop to
+            reorder, start, pause, resume, and stop queue at any time with
+            real-time progress tracking.
           </p>
         </div>
         <div class="feature">
-          <h3>🌐 Bulk Translation & Optimization</h3>
+          <h3>Import & Export</h3>
           <p>
-            Translate your prompts instantly to 8+ languages for global
-            campaigns. Optimize prompts across multiple AI providers (Gemini,
-            ChatGPT, Claude) to get better results. Localize content at scale
-            in minutes instead of days.
+            Import prompts from CSV files and export your prompts to CSV or
+            JSON. Manual prompt entry option available for quick additions.
           </p>
         </div>
         <div class="feature">
-          <h3>⚙️ Automation & Scheduling</h3>
+          <h3>Customizable Settings</h3>
           <p>
-            Schedule queue processing for specific times (perfect for overnight
-            runs), enable automatic smart retry on failures, and set realistic
-            timing between submissions to avoid rate limits. Set it and forget
-            it.
+            Choose AI model (GPT-3.5-turbo, GPT-4, GPT-4-turbo). Adjust prompt
+            length, style, and configure batch processing delays. Dark/Light
+            theme support.
           </p>
         </div>
         <div class="feature">
-          <h3>📁 Template System & Organization</h3>
+          <h3>Privacy Focused</h3>
           <p>
-            Save your favorite prompts as reusable templates and organize them
-            into color-coded folders. Build a library of brand-consistent
-            prompts and instantly reuse them for similar tasks. Perfect for
-            teams and recurring workflows.
+            Your API key is stored locally and never transmitted to our servers.
+            No tracking or analytics. All data stays on your device.
           </p>
         </div>
         <div class="feature">
-          <h3>💎 Pro Unlimited Access</h3>
+          <h3>Automated Processing</h3>
           <p>
-            Unlock unlimited prompts, advanced features, and priority support
-            with Pro. Generate 500+ images monthly without limits. Perfect for
-            high-volume creators, agencies, and teams. Lifetime access for a
-            one-time price.
+            Watch as prompts are submitted to Sora automatically. Perfect for AI
+            artists, video generation enthusiasts, and anyone who needs bulk
+            prompt processing.
           </p>
         </div>
       </div>
@@ -189,7 +181,7 @@
       "
     >
       <a
-        href="https://yosefhayimsabag.com/prompt-queue/privacy"
+        href="https://yosefhayimsabag.com/sorqa/privacy"
         style="color: #9896a3; text-decoration: none"
         >Privacy Policy</a
       >
